--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@aws-amplify/ui-react": "^6.9.1",
     "aws-amplify": "^6.12.2",
-    "next": "15.1.6",
+    "next": "^14.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
